DTS-46390: Rally Implementation initial version adding profiles in main pom and removing unsed code base